Rewrite README.
Focus on implementations of ApacheDS and dev/test environment.